<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.curso.android.ciant.worldwondersapp.activity.MainActivity" >


    <LinearLayout
        android:id="@+id/linear_layout_register" 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_name"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_view_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_email"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_view_email"
            android:inputType="textWebEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_password"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_view_password"
            android:inputType="numberPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_password_confirmation"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edit_text_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_view_password_confirmation"
            android:inputType="numberPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_country"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_gravity="left"/>

        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_country"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_complete_language"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_gravity="left"/>

        <AutoCompleteTextView
            android:id="@+id/auto_complete_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/auto_complete_language"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_gender"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_gravity="left"/>

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <RadioButton
                android:id="@+id/radio_button_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_male"/>
            
            <RadioButton
                android:id="@+id/radio_button_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_female"/>
        </RadioGroup>

        <CheckBox
            android:id="@+id/check_box_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_notification"
            android:layout_gravity="left"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:layout_marginTop="@dimen/view_margin"/>

    </LinearLayout>

</ScrollView>
